gap fix

--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -61,7 +61,7 @@ p {
 .paragraph-grid {
     margin-top: 1.2in;
     display: grid;
-    row-gap: 3em;
+    row-gap: 4em;
     text-align: center;
     div {
         display: flex;
